// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic value 1`] = `
Bits {
  "idx": Object {
    "a": 0,
    "a_c": 1,
    "all": 1,
    "b": 1,
    "c": 2,
    "d": 3,
    "e": 4,
    "f": 5,
    "g": 6,
  },
  "labels": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "a_c",
    "all",
  ],
  "mask": 127,
  "nega": Object {
    "a": 126,
    "a_c": 120,
    "all": 0,
    "b": 125,
    "c": 123,
    "d": 119,
    "e": 111,
    "f": 95,
    "g": 63,
  },
  "posi": Object {
    "a": 1,
    "a_c": 7,
    "all": 127,
    "b": 2,
    "c": 4,
    "d": 8,
    "e": 16,
    "f": 32,
    "g": 64,
  },
}
`;

exports[`basic value 2`] = `
BitsData {
  "field": Bits {
    "idx": Object {
      "a": 0,
      "a_c": 1,
      "all": 1,
      "b": 1,
      "c": 2,
      "d": 3,
      "e": 4,
      "f": 5,
      "g": 6,
    },
    "labels": Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
      "g",
      "a_c",
      "all",
    ],
    "mask": 127,
    "nega": Object {
      "a": 126,
      "a_c": 120,
      "all": 0,
      "b": 125,
      "c": 123,
      "d": 119,
      "e": 111,
      "f": 95,
      "g": 63,
    },
    "posi": Object {
      "a": 1,
      "a_c": 7,
      "all": 127,
      "b": 2,
      "c": 4,
      "d": 8,
      "e": 16,
      "f": 32,
      "g": 64,
    },
  },
  "has": Object {
    "field": 0,
    "has": 0,
    "is": 0,
    "value": 0,
  },
  "is": Object {
    "field": false,
    "has": false,
    "is": false,
    "value": false,
  },
  "value": 127,
}
`;

exports[`showlabel value 1`] = `
Bits {
  "idx": Object {
    "all": 1,
    "current": 4,
    "link": 8,
    "magnify": 6,
    "mention": 9,
    "pin": 0,
    "potof": 3,
    "search": 5,
    "side": 7,
    "toc": 1,
  },
  "labels": Array [
    "pin",
    "toc",
    "toc",
    "potof",
    "current",
    "search",
    "magnify",
    "side",
    "link",
    "mention",
    "all",
  ],
  "mask": 1023,
  "nega": Object {
    "all": 0,
    "current": 1007,
    "link": 767,
    "magnify": 959,
    "mention": 511,
    "pin": 1022,
    "potof": 1015,
    "search": 991,
    "side": 895,
    "toc": 1017,
  },
  "posi": Object {
    "all": 1023,
    "current": 16,
    "link": 256,
    "magnify": 64,
    "mention": 512,
    "pin": 1,
    "potof": 8,
    "search": 32,
    "side": 128,
    "toc": 6,
  },
}
`;

exports[`showlabel value 2`] = `
BitsData {
  "field": Bits {
    "idx": Object {
      "all": 1,
      "current": 4,
      "link": 8,
      "magnify": 6,
      "mention": 9,
      "pin": 0,
      "potof": 3,
      "search": 5,
      "side": 7,
      "toc": 1,
    },
    "labels": Array [
      "pin",
      "toc",
      "toc",
      "potof",
      "current",
      "search",
      "magnify",
      "side",
      "link",
      "mention",
      "all",
    ],
    "mask": 1023,
    "nega": Object {
      "all": 0,
      "current": 1007,
      "link": 767,
      "magnify": 959,
      "mention": 511,
      "pin": 1022,
      "potof": 1015,
      "search": 991,
      "side": 895,
      "toc": 1017,
    },
    "posi": Object {
      "all": 1023,
      "current": 16,
      "link": 256,
      "magnify": 64,
      "mention": 512,
      "pin": 1,
      "potof": 8,
      "search": 32,
      "side": 128,
      "toc": 6,
    },
  },
  "has": Object {
    "field": 0,
    "has": 0,
    "is": 0,
    "value": 0,
  },
  "is": Object {
    "field": false,
    "has": false,
    "is": false,
    "value": false,
  },
  "value": 1023,
}
`;
